# PositionAnalysis

./: .gitignore  CLAUDE.md  config.yaml  pyproject.toml
.claude/commands/: analyze.md
data/: 持仓记录_2026-04-17.md
src/pa/: __init__.py  analyzer.py  benchmark_fetcher.py  cli.py  fetcher.py  parser.py  portfolio_theory.py  report.py
src/pa/templates/: report.html  report.md
