[project]
name = "position-analysis"
version = "0.1.0"
description = "个人持仓分析工具 - 基金/股票/存款/理财组合分析"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "akshare>=1.12",
    "plotly>=5.18",
    "jinja2>=3.1",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.scripts]
pa = "pa.cli:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
